WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186111
REGRESSION (
r224684
): User-agent seen by page does not change when modified by the develop menu options after reloading
https://bugs.webkit.org/show_bug.cgi?id=186111
Summary
REGRESSION (r224684): User-agent seen by page does not change when modified b...
Brady Eidson
Reported
2018-05-30 15:04:19 PDT
REGRESSION (
r224684
): User-agent seen by page does not change when modified by the develop menu options after reloading <
rdar://problem/40224638
>
Attachments
Patch
(12.78 KB, patch)
2018-05-30 15:09 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2018-05-30 15:09:36 PDT
Created
attachment 341608
[details]
Patch
Andy Estes
Comment 2
2018-05-30 15:19:26 PDT
Comment on
attachment 341608
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=341608&action=review
> LayoutTests/http/tests/navigation/useragent-reload.php:18 > + testRunner.setCustomUserAgent("WebKitRules");
:|
WebKit Commit Bot
Comment 3
2018-05-30 17:20:23 PDT
Comment on
attachment 341608
[details]
Patch Clearing flags on attachment: 341608 Committed
r232323
: <
https://trac.webkit.org/changeset/232323
>
WebKit Commit Bot
Comment 4
2018-05-30 17:20:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug