REGRESSION (r224684): User-agent seen by page does not change when modified by the develop menu options after reloading. <rdar://problem/34918109> and https://bugs.webkit.org/show_bug.cgi?id=186111

Reviewed by Andy Estes.

Source/WebCore:

Test: http/tests/navigation/useragent-reload.php

* Modules/websockets/WebSocketHandshake.cpp:
(WebCore::WebSocketHandshake::clientHandshakeRequest const): Use setUserAgent() for consistency.

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::startLoadingMainResource): Clear the user agent from the original DocumentLoader request
  before adding additional fields, as reloads should pick up user agent changes.

Tools:

* WebKitTestRunner/InjectedBundle/Bindings/TestRunner.idl:
* WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::TestRunner::setCustomUserAgent):
* WebKitTestRunner/InjectedBundle/TestRunner.h:
* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues):
* WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::didReceiveSynchronousMessageFromInjectedBundle):

LayoutTests:

* TestExpectations: Skip in WK1
* platform/wk2/TestExpectations: Enable in WK2

* http/tests/navigation/resources/user-agent-script.php: Added.
* http/tests/navigation/useragent-reload-expected.txt: Added.
* http/tests/navigation/useragent-reload.php: Added.


Canonical link: https://commits.webkit.org/201546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232323 268f45cc-cd09-0410-ab3c-d52691b4dbfc